<!--
~ Copyright (c) 2022, Samet Vural Üstün, All rights reserved.
-->

<resources>
    <!-- GLOBAL -->
    <string name="app_name">TutorCave</string>

    <!-- ILLUSTRATION PURPOSES -->
    <string name="placeholder">place_holder</string>
    <string name="placeholder_num">1234</string>
    <string name="placeholder_name">Test Name</string>
    <string name="placeholder_username">test_username</string>
    <string name="placeholder_account_type">Type</string>
    <string name="placeholder_title">This is a placeholder title which will be deleted afterwards</string>
    <string name="placeholder_date_1">19/09/2022</string>
    <string name="placeholder_date_2">25/01/2023</string>
    <string name="placeholder_desc">Placeholder desc placeholder desc placeholder desc placeholder desc placeholder desc placeholder desc placeholder desc placeholder desc placeholder desc placeholder desc placeholder desc placeholder desc placeholder desc placeholder desc</string>
    <string name="placeholder_status">\@status</string>
    <string name="placeholder_fields">field#1, field#2, field#3, field#4, field#5, field#6</string>
    <string name="placeholder_message_1">Hi Leon! What\'s up?</string>
    <string name="placeholder_message_2">All fine, Freya. After all the hassle from last week, things got better. What about you?</string>
    <string name="placeholder_message_date">23/04/2001 12:59</string>
    <string name="test1">test_1</string>
    <string name="test2">test_2</string>
    <string name="test3">test_3</string>

    <!-- CONTENT DESCRIPTION -->
    <string name="content_desc_login">Login</string>
    <string name="content_desc_register">Register</string>
    <string name="content_desc_guest">Guest</string>
    <string name="content_desc_profile_picture">Profile picture</string>
    <string name="content_desc_backspace">Backspace</string>
    <string name="content_desc_night_theme">Night theme</string>
    <string name="content_desc_notification">Notifications</string>
    <string name="content_desc_private_acc">Account privacy</string>
    <string name="content_desc_acc_security">Account security</string>
    <string name="content_desc_nav_next">Navigate next</string>
    <string name="content_desc_stats">Account statistic</string>
    <string name="content_desc_about_us">About us</string>
    <string name="content_desc_logout">Logout</string>
    <string name="content_desc_rep">Reputation</string>
    <string name="content_desc_send">Send</string>
    <string name="content_desc_create">Create new discussion/answer</string>

    <!-- SPLASH SCREEN -->
    <string name="act_splash_intro">Make your own way</string>

    <!-- WELCOME SCREEN -->
    <string name="go_to">Get me there</string>
    <string name="login">Login</string>
    <string name="login_desc">Tutor Cave to broaden your horizon, to expand the magnitude of possibilities, to become your best self. Come and join us once again.</string>
    <string name="register">Register</string>
    <string name="register_desc">Some people sit while others are working. Sitters learn nothing, sitters earn nothing. But workers do. Do you want to earn &amp; learn while sitting?</string>
    <string name="guest">Guest</string>
    <string name="guest_desc">You are welcome as a guest. Tutor Cave values all of its users each type. Keep in mind that you will be limited accessing Tutor Cave\'s features as a guest.</string>
    <string name="selection_invalid">Invalid selection</string>

    <!-- REGISTER SCREEN -->
    <string name="forward">Forward</string>
    <string name="register_username">Type your username</string>
    <string name="register_password">Pick a strong password</string>
    <string name="register_email">Provide your e-mail address</string>
    <string name="register_name">Your first name (optional)</string>
    <string name="register_surname">Your surname (optional)</string>
    <string name="invalid_username">Invalid username!</string>
    <string name="invalid_password">Invalid password!</string>
    <string name="invalid_password_length">Password should be 6–22 characters long!</string>
    <string name="invalid_email">Invalid e-mail!</string>

    <!-- LOGIN SCREEN -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="invalid_credentials">Username and/or password cannot be empty</string>

    <!-- USER MENU -->
    <string name="home">Home</string>
    <string name="discussion">Discussions</string>
    <string name="search_tutor">Find A Tutor</string>
    <string name="message">Messages</string>
    <string name="invalid_selection">Invalid selection!</string>

    <!-- HOME FRAGMENT -->
    <string name="home_stats">Personal Stats</string>
    <string name="home_view_all_stats">View all stats</string>
    <string name="accolades">Accolades</string>
    <string name="reputation">Reputation</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="feedback">Feedback: </string>
    <string name="feedback_flag">Flag: </string>
    <string name="login_to_access_stats">Login to access stats</string>
    <string name="login_to_access">Login to access more features</string>

    <!-- DISCUSSIONS FRAGMENT -->
    <string name="search_discussion">Search a discussion</string>
    <string name="total_votes_count">Votes count</string>
    <string name="discussions_involved">Dis. involved</string>
    <string name="up_votes">Up votes received</string>
    <string name="title">Title: </string>
    <string name="type_title">Type title…</string>
    <string name="type_desc">Type description…</string>
    <string name="backspace">Back</string>
    <string name="save">Save</string>

    <!-- FIND TUTOR FRAGMENT -->
    <string name="top_rated">Top rated</string>
    <string name="trending">Trending</string>
    <string name="newcomer">Newcomers</string>
    <string name="filter">Choose any filter</string>
    <string name="search_a_tutor">Search by name/username</string>

    <!-- MESSAGES FRAGMENT -->
    <string name="message_type">Type…</string>
    <string name="search_message">Search a message</string>

    <!-- PROFILE SCREEN -->
    <string name="account_type">Account Type</string>
    <string name="acc_type">Account: </string>
    <string name="privilege">Privileges</string>
    <string name="date_of_creation">Created: </string>
    <string name="last_update">Last update: </string>
    <string name="status">Status: </string>
    <string name="prerequisite">Prerequisite privilege: </string>
    <string name="service_title">Service: </string>
    <string name="description">Description: </string>

    <!-- VIEW PROFILE SCREEN -->
    <string name="services">Services</string>
    <string name="service_name">Service name: </string>
    <string name="service_price">Service price: </string>

    <!-- SETTINGS SCREEN -->
    <string name="settings">Settings</string>
    <string name="settings_change_pp">Edit profile picture</string>
    <string name="settings_night_theme">Night theme</string>
    <string name="settings_notification">Receive notifications</string>
    <string name="settings_private_acc">Private account</string>
    <string name="settings_acc_security">Security &amp; Privacy</string>
    <string name="settings_stats">Stats</string>
    <string name="settings_apply_tutor">Apply to become a tutor</string>
    <string name="settings_save">Save changes</string>
    <string name="settings_logout">Logout</string>
    <string name="apply_tutor">Apply</string>
    <string name="apply_validity">Minimum 400 reputation is required to apply</string>

    <!-- SECURITY AND PRIVACY SCREEN -->
    <string name="settings_opt_sec_and_priv_blocklist">Blocklist</string>
    <string name="settings_opt_sec_and_priv_change_mail">Change e-mail</string>
    <string name="settings_opt_sec_and_priv_change_password">Change password</string>

    <!-- STATS SCREEN -->
    <string name="settings_opt_stats_rep">Reputation</string>
    <string name="settings_opt_stats_accolade">Accolades</string>
    <string name="settings_opt_stats_privilege">Privileges</string>
    <string name="settings_opt_stats_discussion">Discussions involved</string>
    <string name="settings_opt_stats_tutoring_services">Tutoring services</string>
    <string name="settings_opt_stats_feedback">Feedbacks</string>

    <!-- DISCUSSION SCREEN -->
    <string name="answers">Answers</string>
    <string name="answer_date">Answered: </string>
</resources>