<?xml version="1.0" encoding="utf-8"?>
<!--
~ Copyright (c) 2022, Samet Vural Üstün, All rights reserved.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_18sdp"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_4sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_3sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_price"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/home_fragment_primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/srvItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_name"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="normal"
                    android:textColor="@color/home_fragment_secondary_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_3sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_name"
                    android:textStyle="bold"
                    android:textColor="@color/home_fragment_primary_text"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/srvItemSrvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:text="@string/placeholder_desc"
                    android:textStyle="italic"
                    android:textColor="@color/home_fragment_secondary_text"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>