<?xml version="1.0" encoding="utf-8"?>
<!--
~ Copyright (c) 2022, Samet Vural Üstün, All rights reserved.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:background="@color/def_teal_700">

            <ImageView
                android:id="@+id/imgVwItem"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/login"
                android:background="@color/white"
                android:contentDescription="@string/content_desc_login" />

            <TextView
                android:id="@+id/txtItemHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_below="@id/imgVwItem"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/txtItemDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="13dp"
                android:layout_below="@id/txtItemHeader"
                android:maxLines="5"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/login_desc" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>