<?xml version="1.0" encoding="utf-8"?>
<!--
~ Copyright (c) 2022, Samet Vural Üstün, All rights reserved.
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsStatsActivity"
    android:background="@color/setting_primary">

    <RelativeLayout
        android:id="@+id/setStatsLytHdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/setStatsHeaderBackspace"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:padding="@dimen/_12sdp"
            app:srcCompat="@drawable/ic_backspace_24"
            app:tint="@color/white"
            android:clickable="true"
            android:contentDescription="@string/content_desc_backspace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/setStatsLytBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/setStatsLytHdr"
        android:background="@drawable/settings_options_bg"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        android:padding="@dimen/_8sdp">

        <RelativeLayout
            android:id="@+id/setOptRltLytStatsRep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/settings_opt_stats_rep"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_navigate_next_24"
                app:tint="@color/white"
                android:contentDescription="@string/content_desc_nav_next" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setOptRltLytStatsAccolade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/settings_opt_stats_accolade"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_navigate_next_24"
                app:tint="@color/white"
                android:contentDescription="@string/content_desc_nav_next" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setOptRltLytStatsPrivilege"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/settings_opt_stats_privilege"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_navigate_next_24"
                app:tint="@color/white"
                android:contentDescription="@string/content_desc_nav_next" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>