<?xml version="1.0" encoding="utf-8"?>
<!--
~ Copyright (c) 2022, Samet Vural Üstün, All rights reserved.
-->

<!-- TODO: change color palette -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_4sdp"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileVwPgrDiscussionCrdVw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardCornerRadius="14dp"
        app:cardBackgroundColor="@color/test_palette_3.5">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/profileVwPgrObjDiscussionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:text="@string/placeholder_title"
                android:maxLines="1"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="@color/home_fragment_primary_text" />

            <TextView
                android:id="@+id/profileVwPgrObjDiscussionUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:text="@string/placeholder_username"
                android:textSize="@dimen/_11ssp"
                android:textStyle="italic"
                android:textColor="@color/home_fragment_secondary_text"
                app:drawableStartCompat="@drawable/ic_username_black_12"
                app:drawableLeftCompat="@drawable/ic_username_black_12"
                android:drawablePadding="@dimen/_1sdp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_of_creation"
                            android:textSize="@dimen/_11ssp"
                            android:textStyle="bold"
                            android:textColor="@color/home_fragment_secondary_text" />

                        <TextView
                            android:id="@+id/profileVwPgrObjDiscussionCreated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:layout_marginLeft="@dimen/_2sdp"
                            android:text="@string/placeholder_date_1"
                            android:textSize="@dimen/_11ssp"
                            android:textStyle="italic"
                            android:textColor="@color/home_fragment_secondary_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/last_update"
                            android:textSize="@dimen/_11ssp"
                            android:textStyle="bold"
                            android:textColor="@color/home_fragment_secondary_text" />

                        <TextView
                            android:id="@+id/profileVwPgrObjDiscussionLastUpdated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:layout_marginLeft="@dimen/_2sdp"
                            android:text="@string/placeholder_date_2"
                            android:textSize="@dimen/_11ssp"
                            android:textStyle="italic"
                            android:textColor="@color/home_fragment_secondary_text" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        app:srcCompat="@drawable/ic_vote_24"
                        app:tint="@color/home_fragment_primary_text" />

                    <TextView
                        android:id="@+id/profileVwPgrObjDiscussionVote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="@dimen/_3sdp"
                        android:text="@string/placeholder_num"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        android:textColor="@color/home_fragment_primary_text" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>