<?xml version="1.0" encoding="utf-8"?>
<!--
~ Copyright (c) 2022, Samet Vural Üstün, All rights reserved.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_3sdp"
    android:id="@+id/messageItemLytRoot"
    android:background="@color/cardview_light_background">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/user_menu_card2"
        app:cardPreventCornerOverlap="true">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            app:cardPreventCornerOverlap="true"
            app:cardElevation="0dp"
            app:cardCornerRadius="40dp">

            <ImageView
                android:id="@+id/messageItemPP"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:src="@drawable/test_profile_pic_3"
                android:scaleType="centerCrop"
                android:contentDescription="@string/content_desc_profile_picture" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="end|center_vertical"
        android:layout_marginVertical="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_10sdp">

        <TextView
            android:id="@+id/messageItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/placeholder_name"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/home_fragment_primary_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/messageItemMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/placeholder_desc"
            android:textColor="@color/home_fragment_secondary_text"
            android:textSize="@dimen/_10ssp"
            android:textStyle="italic" />

    </LinearLayout>

</LinearLayout>